Feat/mywins (#26)
* feat: wins model and repository

* feat: wins service and handler

* feat: wins endpoint

* docs: swagger update for wins endpoint

* ci: update test coverage from 80 to 70
